# Athena

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
Athena Web-View Template/ai_comparison_synthesis_detail/: code.html
Athena Web-View Template/ai_study_comparison/: code.html
Athena Web-View Template/athena_ai_synthesis_detail/: code.html
Athena Web-View Template/athena_article_analysis/: code.html
Athena Web-View Template/athena_dashboard/: code.html
Athena Web-View Template/athena_search_results/: code.html
Athena Web-View Template/bookmarks_manager/: code.html
Athena Web-View Template/interactive_research_analysis/: code.html
Athena Web-View Template/interactive_research_analysis_raw_data_view/: code.html
Athena Web-View Template/interactive_research_analysis_regression_view/: code.html
Athena Web-View Template/interest_profile_setup/: code.html
Athena Web-View Template/research_article_detail/: code.html
Athena Web-View Template/research_dashboard/: code.html
Athena Web-View Template/saved_searches_alerts/: code.html
alembic/: env.py
digest/: aggregate.py  compose.py  config.py  delivery.py  models.py  profiles.py  render.py  runner.py
enterprise_api/: api.py  auth.py  models.py  provisioning.py  rate_limit.py
evidence_engine/: config.py
scripts/: provision_organization.py  run_daily_cycle.py  run_digests.py  sync_search_index.py
tests/: conftest.py  test_config.py  test_db_connection.py
webapp/: api.py  compare.py  models.py  saved_searches.py  search.py  search_index.py  visualizations.py
(+92 files in other folders)
