[project]
name = "evidence-engine"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "sqlalchemy>=2.0",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "httpx>=0.27",
    "tenacity>=8.2",
    "anthropic>=0.34",
    "pydantic-settings>=2.4",
    "defusedxml>=0.7",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "respx>=0.21",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["eval: golden-set accuracy checks, run explicitly via -m eval"]
addopts = "-m 'not eval'"
